--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -56,6 +56,16 @@
   // overflow-y: auto;
   max-height: 100%;
   margin-left: 300px;
+
+  @media (max-width: 1200px) {
+    padding: 4rem 1rem;
+  }
+  @media (max-width: 800px) {
+    margin-left: 0;
+    padding-top: 3rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
+  }
 }
 
 .container {
