--- a/app/manage/manage.module.scss
+++ b/app/manage/manage.module.scss
@@ -11,6 +11,13 @@
   border: 1px solid #ddd;
   padding: 10px;
   border-radius: 8px;
+  justify-content: space-between;
+}
+
+.photo-card-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .photo-card img {
