--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -829,3 +829,12 @@
     display: none;
   }
 }
+
+.about-stats-card {
+  font-size: 14px;
+  padding: 2rem;
+  color: rgb(48, 48, 48);
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
+  width: fit-content;
+}
