--- a/app/globals.scss
+++ b/app/globals.scss
@@ -69,3 +69,10 @@ a {
   color: inherit;
   text-decoration: none !important;
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
