--- a/components/Gallery/ImageDisplay.module.scss
+++ b/components/Gallery/ImageDisplay.module.scss
@@ -5,6 +5,7 @@
   z-index: 999;
   height: 100vh;
   width: 100vw;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,5 +56,12 @@
   .image-display {
     display: flex;
     justify-content: center;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .overlay {
+    height: calc(100vh + 4.4rem);
+    width: calc(100vw + 2rem);
   }
 }
