--- a/components/MobileTopMenubar.module.scss
+++ b/components/MobileTopMenubar.module.scss
@@ -9,6 +9,7 @@
   // min-height: 40px;
   background-color: #f7f7f7;
   border-bottom: 1px solid var(--border-color);
+  width: calc(100vw - 2rem);
   @media (min-width: 800px) {
     display: none;
   }
